--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 	<section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"></section>
 		<section id="domeinen">
 			<h3>Domeinen</h3>	
-			<section id="domeinen" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html" class="generic"></section>
-			<section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html" class="generic"></section>
-			<section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html" class="generic"></section>
+			<section id="domeinen" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></section>
+			<section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html"></section>
+			<section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html"></section>
 			<section id="gemeten waarden">
 				<h4>Gemeten waarden</h4>
 				<div id="gemeten-waarden-intro" data-include="https://docs.geostandaarden.nl/bro/gen/gemeten-waarden-intro.html"></div>
@@ -59,8 +59,8 @@
 				<div id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></div> 
 			</section>
 			<section id="nummer" data-include="https://docs.geostandaarden.nl/bro/gen/nummer.html"></section>
-			<section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html" class="generic"></section>
-			<section id="datumtijd" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html" class="generic"></section>
+			<section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html"</section>
+			<section id="datumtijd" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html"></section>
 			<section id="waardelijsten">
 				<h4>Waardelijsten</h4>
 				<div id="waardelijst-intro" data-include="https://docs.geostandaarden.nl/bro/gen/waardelijst.html"></div> 
@@ -68,10 +68,10 @@
 				<section id="waardelijst-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/codelijst.html"></section>
 			</section>
 			<section id="coordinatenpaar" data-include="https://docs.geostandaarden.nl/bro/gen/coordinatenpaar.html"></section>
-			<section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html" class="generic"></section>    
+			<section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html"></section>    
 		</section>
-		<section data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html" class="generic"></section>
-		<section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html" class="generic"></section>
+		<section data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html"></section>
+		<section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html"></section>
 	</section>
 
 </body>
