--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 	<!-- introductie gegevensdefinitie generiek -->
 	<!-- hoofdstuk 5 -->
 	<section id="intro-gegevensdefinitie" class='generic informative'>
-	<h2>Opbouw van de gegevensdefinitie</h2>
-	<section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"></section>
+		<h2>Opbouw van de gegevensdefinitie</h2>
+		<section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"></section>
 		<section id="domeinen">
 			<h3>Domeinen</h3>	
 			<section id="domeinen" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></section>
@@ -69,13 +69,16 @@
 			</section>
 			<section id="coordinatenpaar" data-include="https://docs.geostandaarden.nl/bro/gen/coordinatenpaar.html"></section>
 			<section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html"></section>    
+			</section>
 		</section>
 		<section data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html"></section>
 		<section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html"></section>
 	</section>
 
+	<!-- Model -->
+	<!-- hoofdstuk 6 en Hoofdstuk 7 -->	
+	<div data-include="data/GMW-cat.respec.html" data-include-replace=true></div>
+	
 </body>
-	<!-- MODEL -->
-  <div data-include="data/GMW-cat.respec.html" data-include-replace=true></div>
 
 </html>
