--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: Nightly-build.10</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230921-085150</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20230925-095010</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -62,7 +62,7 @@
          <section>
             <h2>Het domeinmodel</h2>
             <section>
-               <div class="imageinfo overview"><img src="Images/EAID_E820AF53_7FB7_42e8_95C4_297D746526CE.png" usemap="#imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE"><area shape="rect" alt="Verkenning" coords="1216,469,1450,578" href="#global_class_Model_Verkenning"><area shape="rect" alt="Monitoringbuis" coords="533,642,1025,942" href="#global_class_Model_Monitoringbuis"><area shape="rect" alt="Toegepast materiaal" coords="533,1011,806,1162" href="#global_class_Model_Toegepastmateriaal"><area shape="rect" alt="Ingeplaatst deel" coords="1216,806,1544,946" href="#global_class_Model_Ingeplaatstdeel"><area shape="rect" alt="Zandvang" coords="1216,642,1544,746" href="#global_class_Model_Zandvang"><area shape="rect" alt="Grondwatermonitoringput" coords="560,14,991,578" href="#global_class_Model_Grondwatermonitoringput"><area shape="rect" alt="Geo-ohmkabel" coords="14,642,355,765" href="#global_class_Model_Geoohmkabel"><area shape="rect" alt="Filter" coords="656,1204,924,1379" href="#global_class_Model_Filter"><area shape="rect" alt="Elektrode" coords="14,834,355,1002" href="#global_class_Model_Elektrode"><area shape="rect" alt="Stijgbuisdeel" coords="779,1408,1025,1510" href="#global_class_Model_Stijgbuisdeel"></map><p><b>Grondwatermonitorput (GMW)</b></p>
+               <div class="imageinfo overview"><img src="Images/EAID_E820AF53_7FB7_42e8_95C4_297D746526CE.png" usemap="#imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE"><area shape="rect" alt="Verkenning" coords="1215,468,1448,577" href="#global_class_Model_Verkenning"><area shape="rect" alt="Monitoringbuis" coords="532,641,1023,940" href="#global_class_Model_Monitoringbuis"><area shape="rect" alt="Toegepast materiaal" coords="532,1010,805,1160" href="#global_class_Model_Toegepastmateriaal"><area shape="rect" alt="Ingeplaatst deel" coords="1215,805,1542,944" href="#global_class_Model_Ingeplaatstdeel"><area shape="rect" alt="Zandvang" coords="1215,641,1542,745" href="#global_class_Model_Zandvang"><area shape="rect" alt="Grondwatermonitoringput" coords="560,14,989,577" href="#global_class_Model_Grondwatermonitoringput"><area shape="rect" alt="Geo-ohmkabel" coords="14,641,355,764" href="#global_class_Model_Geoohmkabel"><area shape="rect" alt="Filter" coords="655,1202,922,1377" href="#global_class_Model_Filter"><area shape="rect" alt="Elektrode" coords="14,832,355,1000" href="#global_class_Model_Elektrode"><area shape="rect" alt="Stijgbuisdeel" coords="778,1406,1023,1508" href="#global_class_Model_Stijgbuisdeel"></map><p><b>Grondwatermonitorput (GMW)</b></p>
                </div>
             </section>
          </section>
@@ -947,7 +947,8 @@
                                     gevolg van delfstofwinning. Stijging is uitzonderlijk en meestal een gevolg van wateropname
                                     door veen.
                                     <em>Putstabiliteit</em> is bedoeld als onveranderlijk gegeven. Het attribuut dient alleen op <em>stabielNAP</em> gezet te worden als de bronhouder weet dat de put niet meezakt met maaiveldveranderingen
-                                    ten gevolge van een natuurlijk proces omdat de put verankerd is.</p>
+                                    ten gevolge van een natuurlijk proces, bijvoorbeeld omdat de put is verankerd en het
+                                    bekend is dat er ter plekke geen sprake is van bodemdaling door gaswinning.</p>
                                  </td>
                            </tr>
                         </tbody>
