--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20190910</p>
       <p>Imvertor: Nightly-build.11</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20231012-134828</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.1-1-20190910-20231012-135752</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -1333,7 +1333,7 @@
                               <th>Regels</th>
                               <td>
                                  
-                                 <p>Het attribuut moet aanwezig zijn wanneer de waarde van het attribuut <em>initiële functie</em> gelijk is aan <em>onttrekking</em> en de waarde van het attribuut <em>kader aanlevering</em> gelijk is aan <em>WW</em> of <em>monitoringBijDrinkgwaterwinning</em>.
+                                 <p>Het attribuut moet aanwezig zijn wanneer de waarde van het attribuut <em>initiële functie</em> gelijk is aan <em>onttrekking</em> en de waarde van het attribuut <em>kader aanlevering</em> gelijk is aan <em>WW</em> of <em>monitoringBijDrinkwaterwinning</em>.<br clear="none">
                                     Het attribuut mag niet aanwezig zijn in alle andere gevallen.</p>
                                  </td>
                            </tr>
@@ -1356,7 +1356,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d75039e5181">
+                  <section id="detail_d75039e5184">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1395,7 +1395,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d75039e5366">
+                  <section id="detail_d75039e5369">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1433,7 +1433,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d75039e5551">
+                  <section id="detail_d75039e5554">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1472,7 +1472,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d75039e5736">
+                  <section id="detail_d75039e5739">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1510,7 +1510,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d75039e5921">
+                  <section id="detail_d75039e5924">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2448,7 +2448,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d75039e9019">
+                  <section id="detail_d75039e9022">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
