--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -1309,7 +1309,7 @@
                      <th>Regels</th>
                      <td>
                         
-                        <p>Het attribuut moet aanwezig zijn wanneer de waarde van het attribuut <em>initiële functie</em> gelijk is aan <em>onttrekking</em> en de waarde van het attribuut <em>kader aanlevering</em> gelijk is aan <em>WW</em> of <em>monitoringBijDrinkgwaterwinning</em>.
+                        <p>Het attribuut moet aanwezig zijn wanneer de waarde van het attribuut <em>initiële functie</em> gelijk is aan <em>onttrekking</em> en de waarde van het attribuut <em>kader aanlevering</em> gelijk is aan <em>WW</em> of <em>monitoringBijDrinkwaterwinning</em>.<br clear="none">
                            Het attribuut mag niet aanwezig zijn in alle andere gevallen.</p>
                         </td>
                   </tr>
@@ -1332,7 +1332,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d75039e5181">
+         <section id="detail_d75039e5184">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1371,7 +1371,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d75039e5366">
+         <section id="detail_d75039e5369">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1409,7 +1409,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d75039e5551">
+         <section id="detail_d75039e5554">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1448,7 +1448,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d75039e5736">
+         <section id="detail_d75039e5739">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1486,7 +1486,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d75039e5921">
+         <section id="detail_d75039e5924">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2424,7 +2424,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d75039e9019">
+         <section id="detail_d75039e9022">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
