--- a/data/Belangrijkste entiteiten.html
+++ b/data/Belangrijkste entiteiten.html
@@ -93,11 +93,11 @@
 		</section>
 		<section id="Verkenning">
 			<h4>Verkenning</h4>
-			<p>CONCEPT Een grondwatermonitoringput kan gerelateerd zijn aan één of meerdere verkenning(en).
-			   Een verkenning is bijvoorbeeld een booronderzoek (BHR), een sondeeronderzoek (CPT), of een milieuhygienisch bodemonderzoek (SAD). Dergelijke verkenningen worden in de basisregistratie ondergrond geregistreerd in de domeinen bodem- en grondonderzoek en milieukwaliteit.
+			<p>Een grondwatermonitoringput kan gerelateerd zijn aan één of meerdere verkenning(en).
+			   Een verkenning is bijvoorbeeld een booronderzoek (BHR), een sondeeronderzoek (CPT), of een boring van een milieuhygienisch bodemonderzoek (SAD). Dergelijke verkenningen worden in de basisregistratie ondergrond geregistreerd in de domeinen bodem- en grondonderzoek en milieukwaliteit.
 			   Met het vastleggen van gerelateerde verkenning(en) kan een gebruiker makkelijker achterhalen wat bijvoorbeeld de samenstelling van de ondergrond is op de plaats van de grondwatermonitoringput, hoe diep er geboord is of welk aanvulmateriaal er gebruikt is.</p>
-			<p>In het domeinmodel van de grondwatermonitoringput wordt, aan de hand van het identificerende (BHR/CPT/SAD) BRO-ID, een verwijzing opgenomen naar de gerelateerde verkenning.
-			   Er kunnen meerdere verkenningen zijn uitgevoerd. Het is bijvoorbeeld denkbaar dat de boormonsterbeschrijving vanuit meerdere vakgebieden wordt geproduceerd en dat monsteranalyses opvolgend worden uitgevoerd, waardoor nieuwe booronderzoeken kunnen ontstaan van 1 boring.</p>
+			<p>In het domeinmodel van de grondwatermonitoringput wordt, aan de hand van het identificerende (BHR/CPT/SAD) BRO-ID, een verwijzing opgenomen naar de gerelateerde verkenning. In het geval van een milieuhygienisch bodemonderzoek (SAD) wordt ook de identificatie van de betreffende boring van het betreffende milieuhygienisch bodemonderzoek opgenomen.
+			   Er kunnen meerdere verkenningen zijn uitgevoerd. Het is bijvoorbeeld denkbaar dat de boormonsterbeschrijving vanuit meerdere vakgebieden wordt geproduceerd en dat monsteranalyses opvolgend worden uitgevoerd, waardoor nieuwe bodemonderzoeken kunnen ontstaan van 1 boring.</p>
 			<p>Enkel 'procesgedreven' verkenning(en) zijn in scope. Dit zijn de verkenning(en) die direct gerelateerd zijn aan het proces waarmee de constructie van een grondwatermonitoringput wordt ingericht.
 			   Het gaat hierbij om de booronderzoek(en) (BHR) die het boorgat beschrijven waarin de put is ingericht, de sondeeronderzoek(en) (CPT) die zijn gemeten met de sondeerstang waarmee de put in de grond is gedrukt, of de milieuhygienische bodemonderzoek(en) (SAD) waarin de boring is opgenomen waarin de put is ingericht.
 			   Bij een 'procesgedreven' verkenning ligt de inrichtingsdatum van de put dus per definitie op of na de datum waarop de boring of sondering is uitgevoerd.</p>
@@ -105,7 +105,7 @@
 			   Er is verkend om voor dergelijke gevallen de mogelijkheid te bieden om een andere, nabijgelegen verkenning te koppelen, die gegevensinhoudelijk representatief is voor de ontbrekende 'procesgedreven' verkenning(en).
 			   Gekozen is om dergelijke 'representatieve' verkenning(en) buiten scope te stellen. Dergelijke 'representatieve' verkenning(en) berusten namelijk op een interpretatie, waar de basisregistratie ondergrond in principe niet voor is bedoeld. Indien gewenst kan een gebruiker, op basis van 'geografische analyses', deze interpretatieve koppeling zelf maken.</p>
 			<p>Voor nieuw te registreren grondwatermonitoringputten, is het verplicht om de gerelateerde verkenning(en) te registreren. Dit geldt uiteraard alleen indien de gerelateerde 'procesgedreven' verkenning(en) beschikbaar zijn, of later beschikbaar komen, in de basisregistratie ondergrond.
-			   Voor grondwatermonitoringputten die reeds zijn geregistreerd in de basisregistratie ondergrond, kunnen de gerelateerde verkenning(en), indien gewenst, achteraf worden toegevoegd. CONCEPT</p>
+			   Voor grondwatermonitoringputten die reeds zijn geregistreerd in de basisregistratie ondergrond, kunnen de gerelateerde verkenning(en), indien gewenst, achteraf worden toegevoegd.</p>
 		</section>
 	</body>
 </html>
