--- a/index.html
+++ b/index.html
@@ -17,39 +17,23 @@
 
 		<!-- status document -->
 		<section id='sotd'></section>
-		<!-- Note, using <section id='sotd'/> would result in table of content not showing up.
+		<!-- NOTE: using <section id='sotd'/> would result in table of content not showing up.
 		It turns out that it is very important to use explicit opening and closing XML element tags, at least with regards to section.-->
 
 		<!-- Hoofdstuk 1. Inleiding -->
 		<section id='inleiding' class='generic informative'>
 			<h2>Inleiding</h2>
-				<section
-					id="leeswijzer"
-					data-include="leeswijzer.md"
-					data-format="markdown">
-<!--
-					<h3>Leeswijzer</h3>
-						<p><a href ="#inleiding">Hoofdstuk 1</a> geeft het doel en de doelgroep van een catalogus.</p>
-						<p><a href ="#algemene-kenmerken-en-begrippen">Hoofdstuk 2</a> behandelt enkele algemene aspecten van het BRO-systeem en begrippen van algemene aard.</p>
-						<p><a href ="#Grondwatermonitoring">Hoofdstuk 3</a> plaatst het object in de gegevenssystematiek van de basisregistratie ondergrond en vertelt wat de benadering is geweest bij het opstellen van de gegevensdefinitie.</p>
-						<p><a href ="#Grondwatermonitoringput">Hoofdstuk 4</a> is de toelichting op de gegevensdefinitie van het registratieobject die in de ministeriële regeling is opgenomen.</p>
-						<p><a href ="#intro-gegevensdefinitie">Hoofdstuk 5</a> vertelt hoe de gegevensdefinitie is opgebouwd en welke aspecten van de gegevens daarin worden beschreven.</p>
-						<p><a href ="#gegevensdefinitie">Hoofdstuk 6</a> geeft de inhoud weer van het eerste artikel van de ministeriële regeling en dat is het deel waarin de definitie is opgenomen van het registratieobject, van de delen waaruit het is opgebouwd, de entiteiten, en van de eigenschappen van die delen, de attributen.</p>
-						<p><a href ="#uitbreidbare-waardelijsten">Hoofdstuk 7</a> geeft de inhoud weer van het tweede artikel van de ministeriële regeling en dat is het deel waarin uitbreidbare waardelijsten staan waarnaar in hoofdstuk 6 verwezen wordt.</p>
--->						
-				
-				</section>
+				<section id="leeswijzer" data-include="leeswijzer.md" data-format="markdown"></section>
 				<section id='doel-en-doelgroep' data-include='https://docs.geostandaarden.nl/bro/gen/doel-en-doelgroep.html'></section>
 				<section id='totstandkoming' data-include='https://docs.geostandaarden.nl/bro/gen/totstandkoming.html'></section>
 				<section id='beheer' data-include='https://docs.geostandaarden.nl/bro/gen/beheer.html'></section>
 		</section>
 
 		<!-- Hoofdstuk 2. Algemene kenmerken en bergippen -->
-		<section
-			id='algemene-kenmerken-en-begrippen'
-			data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html'
-					<!-- NOTE, temporarily changed the data-include from 'https://docs.geostandaarden.nl/bro/gen/algemene-kenmerken-en-begrippen.html' to 'https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html', in order to check the changes to Chapter 2 that have not yet been published to Geonovum. -->
-			class='generic informative'>
+		<section id='algemene-kenmerken-en-begrippen' data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html' class='generic informative'>
+			<!--
+			NOTE: temporarily changed the data-include from 'https://docs.geostandaarden.nl/bro/gen/algemene-kenmerken-en-begrippen.html' to 'https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html', in order to check the changes to Chapter 2 that have not yet been published to Geonovum.
+			-->
 		</section>
 
 		<!-- Hoofdstuk 3. Grondwatermonitoring; positie GMW binnen gegevenssystematiek BRO (niet normatief c.q. niet juridisch deel) -->
@@ -58,6 +42,9 @@
 			data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/Grondwatermonitoring.md'
 			data-format="markdown"
 			class='generic informative'>
+			<!--
+			NOTE, JV, 06-12-2023: In the final GMW catalogue the data-include must be changed into 'https://docs.geostandaarden.nl/bro/gen/gm/Grondwatermonitoring.md.
+			-->
 		</section>
 
 		<!-- Hoofdstuk 4. Grondwatermonitoringput (normatieve/juridische deel) -->
