--- a/index.html
+++ b/index.html
@@ -1,102 +1,109 @@
 <!DOCTYPE html>
 <html lang="nl">
 
-	<head>
-		<meta content="text/html; charset=utf-8" http-equiv="content-type">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<script src="https://cdn.jsdelivr.net/gh/digitalbazaar/respec-mermaid@1.0.1/dist/main.js" class="remove"></script>
-		<script src="js/bro-config.js" class="remove"></script>
-		<script src="js/config.js" class="remove"></script>
-		<script class="remove"> respecConfig = {...organisationConfig, ...respecConfig}</script>
-		<script>document.title = respecConfig.title</script>
-		<title>BRO Gegevenscatalogus Grondwatermonitoringput</title>
-		<link rel='shortcut icon' type='image/x-icon' href='https://tools.geostandaarden.nl/respec/style/logos/Geonovum.ico' />
-		<link rel="stylesheet" type="text/css" href='https://docs.geostandaarden.nl/bro/gen/localstyle.css'/>
-		<script src="https://gitdocumentatie.logius.nl/publicatie/respec/builds/respec-nlgov.js" class="remove" async></script>
-	</head>
+<head>
+	<meta content="text/html; charset=utf-8" http-equiv="content-type">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<script src="https://cdn.jsdelivr.net/gh/digitalbazaar/respec-mermaid@1.0.1/dist/main.js" class="remove"></script>
+	<script src="js/bro-config.js" class="remove"></script>
+	<script src="js/config.js" class="remove"></script>
+	<script class="remove"> respecConfig = {...organisationConfig, ...respecConfig}</script>
+	<script>document.title = respecConfig.title</script>
+	<title>BRO Gegevenscatalogus Grondwatermonitoringput</title>
+	<link rel='shortcut icon' type='image/x-icon' href='https://tools.geostandaarden.nl/respec/style/logos/Geonovum.ico' />
+	<link rel="stylesheet" type="text/css" href='https://docs.geostandaarden.nl/bro/gen/localstyle.css'/>
+	<script src="https://gitdocumentatie.logius.nl/publicatie/respec/builds/respec-nlgov.js" class="remove" async></script>
+</head>
 	
-	<body>
-		<!-- Damenvatting -->
-		<section id="abstract" data-include-format="markdown" data-include='samenvatting.md'></section>
+<body>
+	<!-- Damenvatting -->
+	<section id="abstract" data-include-format="markdown" data-include='samenvatting.md'></section>
 
-		<!-- Status van dit document document -->
-		<section id='sotd'></section>
+	<!-- Status van dit document document -->
+	<section id='sotd'></section>
 
-		<!-- Hoofdstuk 1. Inleiding -->
-		<section id='inleiding' class='generic informative'>
-			<h2>Inleiding</h2>
-				<section id='leeswijzer' data-include='leeswijzer.md' data-include-format='markdown'></section>
-				<section id='doel-en-doelgroep' data-include='https://docs.geostandaarden.nl/bro/gen/doel-en-doelgroep.html'></section>
-				<section id='totstandkoming' data-include='https://docs.geostandaarden.nl/bro/gen/totstandkoming.html'></section>
-				<section id='beheer' data-include='https://docs.geostandaarden.nl/bro/gen/beheer.html'></section>
-		</section>
+	<!-- Hoofdstuk 1. Inleiding -->
+	<section id='inleiding' class='generic informative'>
+		<h2>Inleiding</h2>
+			<section id='leeswijzer' data-include='leeswijzer.md' data-include-format='markdown'></section>
+			<section id='doel-en-doelgroep' data-include='https://docs.geostandaarden.nl/bro/gen/doel-en-doelgroep.html'></section>
+			<section id='totstandkoming' data-include='https://docs.geostandaarden.nl/bro/gen/totstandkoming.html'></section>
+			<section id='beheer' data-include='https://docs.geostandaarden.nl/bro/gen/beheer.html'></section>
+	</section>
 
-		<!-- Hoofdstuk 2. Algemene kenmerken en bergippen -->
-		<section
-			id='algemene-kenmerken-en-begrippen'
-			data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html'
-			class='generic informative'>
-			<!--
-			NOTE: temporarily changed the data-include from 'https://docs.geostandaarden.nl/bro/gen/algemene-kenmerken-en-begrippen.html' to 'https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html', in order to check the changes to Chapter 2 that have not yet been published to Geonovum.
-			-->
-		</section>
+	<!-- Hoofdstuk 2. Algemene kenmerken en bergippen -->
+	<section
+		id='algemene-kenmerken-en-begrippen'
+		data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html'
+		class='generic informative'>
+		<!--
+		NOTE: temporarily changed the data-include from 'https://docs.geostandaarden.nl/bro/gen/algemene-kenmerken-en-begrippen.html' to 'https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/algemene-kenmerken-en-begrippen.html', in order to check the changes to Chapter 2 that have not yet been published to Geonovum.
+		-->
+	</section>
 
-		<!-- Hoofdstuk 3. Grondwatermonitoring -->
-		<section
-			id='Grondwatermonitoring'
-			data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/grondwatermonitoring.md'
-			data-include-format='markdown' class='generic informative'>
-			<!--
-			NOTE, JV, 06-12-2023: In the final GMW catalogue the data-include must be changed into 'https://docs.geostandaarden.nl/bro/gen/gm/Grondwatermonitoring.md.
-			-->
-		</section>
+	<!-- Hoofdstuk 3. Grondwatermonitoring -->
+	<section
+		id='Grondwatermonitoring'
+		data-include='https://raw.githubusercontent.com/BROprogramma/generiek/gh-pages/gm/grondwatermonitoring.md'
+		data-include-format='markdown' class='generic informative'>
+		<!--
+		NOTE, JV, 06-12-2023: In the final GMW catalogue the data-include must be changed into 'https://docs.geostandaarden.nl/bro/gen/gm/Grondwatermonitoring.md.
+		-->
+	</section>
 
-		<!-- Hoofdstuk 4. Grondwatermonitoringput (normatieve/juridische deel) -->
-		<section
-			id='Grondwatermonitoringput'
-			data-include='toelichting.md'
-			data-include-format='markdown'>
-		</section>
+	<!-- Hoofdstuk 4. Grondwatermonitoringput (normatieve/juridische deel) -->
+	<section
+		id='Grondwatermonitoringput'
+		data-include='toelichting.md'
+		data-include-format='markdown'>
+	</section>
 
-		<!-- Hoofdstuk 5. Opbouw van de gegevensdefinitie -->
-		<section
-			id="intro-gegevensdefinitie"
-			class='generic informative'>
+	<!-- Hoofdstuk 5. Opbouw van de gegevensdefinitie -->
+	<section
+		id="intro-gegevensdefinitie"
+		class='generic informative'>
 
-			<h2>Opbouw van de gegevensdefinitie</h2>
-			<section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"></section>
-			<section id="domeinen">
-				<h3>Domeinen</h3>
-				<div id="domeinen-intro" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></div>
-				<section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html"></section>
-				<section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html"></section>
-				<section id="gemeten waarden">
-					<h4>Gemeten waarden</h4>
-					<div id="gemeten-waarden-intro" data-include="https://docs.geostandaarden.nl/bro/gen/gemeten-waarden-intro.html"></div>
-					<section id="meetwaarde" data-include="https://docs.geostandaarden.nl/bro/gen/meetwaarde.html"></section>
-					<div id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></div>
-				</section>
-				<section id="nummer" data-include="https://docs.geostandaarden.nl/bro/gen/nummer.html"></section>
-				<section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html"></section>
-				<section id="tijdstip" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html"></section>
-				<section id="waardelijsten">
-					<h4>Waardelijsten</h4>
-					<div id="waardelijst-intro" data-include="https://docs.geostandaarden.nl/bro/gen/waardelijst.html"></div>
-					<section id="waardelijst-niet-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/enumeratie.html"></section>
-					<section id="waardelijst-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/codelijst.html"></section>
-				</section>
-				<section id="coordinatenpaar" data-include="https://docs.geostandaarden.nl/bro/gen/coordinatenpaar.html"></section>
-				<section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html"></section>
+		<h2>Opbouw van de gegevensdefinitie</h2>
+		<section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"></section>
+		<section id="domeinen">
+			<h3>Domeinen</h3>
+			<div id="domeinen-intro" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></div>
+			<section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html"></section>
+			<section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html"></section>
+			<section id="gemeten waarden">
+				<h4>Gemeten waarden</h4>
+				<div id="gemeten-waarden-intro" data-include="https://docs.geostandaarden.nl/bro/gen/gemeten-waarden-intro.html"></div>
+				<section id="meetwaarde" data-include="https://docs.geostandaarden.nl/bro/gen/meetwaarde.html"></section>
+				<div id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></div>
 			</section>
-			<section id="domeinmodel" data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html"></section>
-			<section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html"></section>
+			<section id="nummer" data-include="https://docs.geostandaarden.nl/bro/gen/nummer.html"></section>
+			<section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html"></section>
+			<section id="tijdstip" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html"></section>
+			<section id="waardelijsten">
+				<h4>Waardelijsten</h4>
+				<div id="waardelijst-intro" data-include="https://docs.geostandaarden.nl/bro/gen/waardelijst.html"></div>
+				<section id="waardelijst-niet-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/enumeratie.html"></section>
+				<section id="waardelijst-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/codelijst.html"></section>
+			</section>
+			<section id="coordinatenpaar" data-include="https://docs.geostandaarden.nl/bro/gen/coordinatenpaar.html"></section>
+			<section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html"></section>
 		</section>
+		<section id="domeinmodel" data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html"></section>
+		<section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html"></section>
+	</section>
 
-		<!-- Hoofdstukken 6 en 7. Gegevensdefinitie en Uitbreidbare waardenlijsten  -->
-		<div
-			data-include="data/GMW-cat.respec.html"
-			data-include-replace=true>
-		</div>
-		
-	</body>
+	<!-- Hoofdstukken 6 en 7. Gegevensdefinitie en Uitbreidbare waardenlijsten  -->
+	<div
+		data-include="data/GMW-cat.respec.html"
+		data-include-replace=true>
+	</div>
+	
+	<!-- Leaflet required for panZoomImage-->
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+	<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+	<!-- panZoomImage -->
+	<script src="https://docs.geostandaarden.nl/bro/gen/js/panZoomImage.js"></script>	
+	
+</body>
+
 </html>
